--- a/Task1/Pages/UserFunctions/OrderList.cshtml
+++ b/Task1/Pages/UserFunctions/OrderList.cshtml
@@ -30,10 +30,24 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="p-5">
-                            <a class="btn btn-primary" href="/UserFunctions/index" role="button">Add New </a>
+
+                            <div class="text-center">
+                                <h1 class="h4 text-gray-900 mb-4">Invoice Lists!</h1>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    <a class="btn btn-primary btn-block" href="/UserFunctions/index" role="button">Add New </a>
+                                </div>
+
+                                <div class="col-sm-2">
+                                    <button type="button" class="btn btn-danger btn-block">Delete Row</button>
+                                </div>
+                            </div>
+
                             <table class="table">
                                 <thead>
                                     <tr>
+                                        <th>Select</th>
                                         <th>Invoice No:</th>
                                         <th>Customer Name</th>
                                         <th>Invoice Date</th>
@@ -47,7 +61,6 @@
                                 <tbody>
                                 </tbody>
                             </table>
-                            <button type="button" class="btn btn-danger">Delete Row</button>
 
                         </div>
                     </div>
@@ -67,6 +80,7 @@
 <script>
     $(document).ready(function () {
         getInvoices();
+        //deleteRows();
     });
 
     function getInvoices() {
@@ -74,26 +88,33 @@
             type: "GET",
             url: "/api/Invoices/GetInvoices",
             dataType: "json",
-            success: function (data) {
-                var invoiceData = data;
-                var newData = invoiceData.data;
-
-                for (i = 0; i < newData.length; i++) {
-                    var markup = "<tr><td>" + newData[i].invoiceNo + "</td><td>" + newData[i].customerRefId + "</td><td>" + newData[i].invoiceDate + "</td><td>" + newData[i].referenceNo + "</td><td>" + newData[i].note + "</td><td>" + newData[i].totalExcl + "</td><td>" + newData[i].totalTax + "</td><td>" + newData[i].totalIncl + "</td></tr>";
-                    $("table tbody").append(markup);
-                }
-            },
-
-            failure: function (data) {
-                console.log("failure");
-            },
-
-            error: function (data) {
-                console.log("error");
+            beforeSend: function (xhdr) {
+                xhdr.setRequestHeader(
+                    "Authorization", "Bearer " + localStorage.getItem('Id_token'));
             }
 
+        }).done(function (data, statusText, xhdr) {
+            var invoiceData = data;
+            var newData = invoiceData.data;
+            for (i = 0; i < newData.length; i++) {
+                var markup = "<tr><td><input type='checkbox' name='record'></td><td>" + newData[i].invoiceNo + "</td><td>" + newData[i].customerRefId + "</td><td>" + newData[i].invoiceDate + "</td><td>" + newData[i].referenceNo + "</td><td>" + newData[i].note + "</td><td>" + newData[i].totalExcl + "</td><td>" + newData[i].totalTax + "</td><td>" + newData[i].totalIncl + "</td></tr>";
+                $("table tbody").append(markup);
+            }
+        }).fail(function (xhdr, statusText, errorText) {
+            $("#result").text(JSON.stringify(xhdr));
         });
     }
+
+    function deleteRows() {
+        $(".btn-danger").click(function () {
+            $("table tbody").find('input[name="record"]').each(function () {
+                if ($(this).is(":checked")) {
+                    //$(this).parents("tr").remove();
+                }
+            });
+        });
+    }
+
 </script>
 
 
